--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ e assim desenvolverem habilidades de interpretação textual, e aprimorar sua im
 <h2 class="carrossel_titulo">Confira algumas novidades!</h2>
 
 <!-- Slider main container -->
+<div class="carrossel_container">
 <div class="swiper">
 <!-- Additional required wrapper -->
 <!-- If we need pagination -->
@@ -70,8 +71,6 @@ e assim desenvolverem habilidades de interpretação textual, e aprimorar sua im
 <div class="swiper-slide"><img src="img/Harry Potter Book.png" alt="HP"></div>
 
 
-
-
 ...
 </div>
 
@@ -85,7 +84,154 @@ e assim desenvolverem habilidades de interpretação textual, e aprimorar sua im
 </div>
 
 
+<div class="card">
+    <!--1 linha-->
+    <div class="card_descricao">
+        <!--1 coluna-->
+        <div class="descricao">
+            <h3 class="descricao_titulo">Heather Morris</h3>
+            <h2 class="descricao_titulo-2">O tatuador de Auschwitz</h2> 
+            <p class="descricao_texto">A incrível história, baseada em fatos, de um amor que os cruéis muros de Auschwitz não foram capazes de impedir
+            </p>
+        </div>
+        <!--2 coluna-->
+        <img src="img/tatuador.webp" alt="descricao" class="descricao_imagem">
+    </div>
+
+    <!--2 linha-->
+    <div class="card_botoes">
+        <!--1 coluna-->
+        <ul class="botoes">
+            <li class="botoes_item"><img src="img/Favoritos.svg" alt="Favoritos"></li>
+            <li class="botoes_item"><img src="img/mercado.svg" alt="Compras"></li>
+        </ul>
+        <!--2 coluna-->
+        <a href="#" class="botoes_ancora">Saiba mais...</a>
+    </div>
+</div>
+</div>
+
 </section>
+
+<section class="topicos">
+    <h2 class="topicos_titulo">MAIS PROCURADOS</h2>
+    <ul class="topicos_lista">
+        <li class="topicos_item">
+            <a href="#" class="topicos_link">Alfabetização</a>            
+        </li>
+        <li class="topicos_item">
+            <a href="#" class="topicos_link">Livros para Bêbes</a>            
+        </li>
+        <li class="topicos_item">
+            <a href="#" class="topicos_link">Colorir</a>            
+        </li>
+        <li class="topicos_item">
+            <a href="#" class="topicos_link">Emoções e Sentimentos</a>            
+        </li>
+        <li class="topicos_item">
+            <a href="#" class="topicos_link">Contos Clássicos</a>            
+        </li>
+
+        
+    </ul>
+</section>
+
+
+<section class="contato">
+    <h2 class="contato_titulo">Book Klub</h2>
+    <p class="contato_texto">Inscreva-se para receber ofertas e novidades por e-mail</p>
+    <input type="email" placeholder="Digite aqui seu e-mail" class="contato_email">
+</section>
+
+<hr/>
+
+<footer class="rodapé">
+    <h2 class="rodapé_titulo">Serviços</h2>
+
+    <ul class="lista_rodapé">
+        <li class="lista_rodapé_titulo">Livros</li>
+            <li class="lista_rodapé_item">
+                <img src="img/CasaDoCodigo.png" alt="CasaDoCodigo">
+                <a href="#" class="lista_rodapé_link">Casa do Livros</a>
+            </li>
+
+            <li class="lista_rodapé_item">
+                <img src="img/Caelum.png" alt="CasaDoCodigo">
+                <a href="#" class="lista_rodapé_link">Caelum</a>
+            </li>
+    </ul>
+
+    <ul class="lista_rodapé">
+        <li class="lista_rodapé_titulo">Livros Online</li>
+        <li class="lista_rodapé_item">
+            <img src="img/Alura.png" alt="Alura">
+            <a href="#" class="lista_rodapé_link">Alura Livros</a>
+        </li>
+
+        <li class="lista_rodapé_item">
+            <img src="img/AluraEmpresas.png" alt="Alura empresa">
+            <a href="#" class="lista_rodapé_link">Empresas</a>
+        </li>
+
+        <li class="lista_rodapé_item">
+            <img src="img/AluraLatam.png" alt="Alura">
+            <a href="#" class="lista_rodapé_link">LATAM</a>
+        </li>
+
+        <li class="lista_rodapé_item">
+            <img src="img/AluraStart.png" alt="Alura">
+            <a href="#" class="lista_rodapé_link">Start</a>
+        </li>
+
+
+
+        <li class="lista_rodapé_item">
+            <img src="img/PM3.png" alt="Alura">
+            <a href="#" class="lista_rodapé_link">PM3</a>
+        </li>
+
+        <li class="lista_rodapé_item">
+            <img src="img/MusicDot.png" alt="Alura">
+            <a href="#" class="lista_rodapé_link">Podcast</a>
+        </li>
+
+    </ul>
+
+
+    <ul class="lista_rodapé">
+        <li class="lista_rodapé_titulo">Comunidade</li>
+        <li class="lista_rodapé_item">
+            <img src="img/HipstersTech.png" alt="Alura">
+            <a href="#" class="lista_rodapé_link">Tech Livros</a>
+        </li>
+
+        <li class="lista_rodapé_item">
+            <img src="img/Scuba.png" alt="Alura empresa">
+            <a href="#" class="lista_rodapé_link">Scuba Dev</a>
+        </li>
+
+        <li class="lista_rodapé_item">
+            <img src="img/Layers.png" alt="Alura">
+            <a href="#" class="lista_rodapé_link">Years</a>
+        </li>
+
+        <li class="lista_rodapé_item">
+            <img src="img/HipstersJobs.png" alt="Alura">
+            <a href="#" class="lista_rodapé_link">Book Klub</a>
+        </li>
+
+        <li class="lista_rodapé_item">
+            <img src="img/LikeABoss.png" alt="Alura">
+            <a href="#" class="lista_rodapé_link">LikeABoss</a>
+        </li>
+
+        <li class="lista_rodapé_item">
+            <img src="img/GUJ.png" alt="Alura">
+            <a href="#" class="lista_rodapé_link">Book Klub Coffee</a>
+        </li>
+    </ul>
+</footer>
+
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
 <script>
